# AbSolute

src/lang/: ast.ml  ast.mli  rewritting.ml
src/lang/preprocessing/: dune  nast.ml  nast.mli
test/: dune  run_tests.ml  test_preprocessing.ml
